# NATURAL-LANGUAGE-PROCESSING

./: .env.example  .gitignore  README copy.md  README.md  app.py  collector.py  pipeline.py  processor.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
outputs/: agent_report.md  agent_report.txt  report.json
scripts/: setup.sh
src/nvidia_agent/: __init__.py  config.py
src/nvidia_agent/agent/: __init__.py  ceo_agent.py  llm.py  models.py  verifier_agent.py
src/nvidia_agent/collectors/: __init__.py  base.py  rss.py  wikipedia.py
src/nvidia_agent/processing/: __init__.py  cleaner.py  embedder.py
src/nvidia_agent/storage/: __init__.py  vector_store.py
src/nvidia_agent/tests/: test_collector.py
tests/: test_processing.py
