[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "nvidia-strategic-intelligence"
version         = "1.0.0"
description     = "AI CEO Strategic Intelligence Agent for NVIDIA Corporation"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [
    { name = "Vinay", email = "your.email@example.com" }
]
keywords = [
    "RAG", "LLM", "strategic intelligence",
    "NVIDIA", "AI agent", "ChromaDB", "Streamlit"
]

[project.scripts]
nvidia-agent = "nvidia_agent.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

# ── pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

# ── ruff (linter / formatter, replaces flake8 + black) ───
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # long lines allowed in prompts

# ── mypy (type checking, optional) ───────────────────────
[tool.mypy]
python_version         = "3.11"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
